--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     background-color: #DCD6F7;
     animation: fadeIn 1.5s ease-in-out forwards;
     text-align: center;
+    margin: 0;
+    min-height: 100vh;
 }
 
 @keyframes fadeIn {
@@ -19,35 +21,29 @@ body {
   }
 }
 
-
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50%;
-    height: 80vh;
     font-family: 'Times New Roman', Times, serif;
+    height: 80vh;
+    width: 100%;
 }
 
-#username {
-    width: 500px;
+
+#username,
+#password {
+    width: 500px;       
+    max-width: 90%;   
     border-radius: 10px;
     height: 30px;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
-
 }
 input::placeholder {
     text-align: center;
 }
 
-#password {
-    width: 500px;
-    border-radius: 10px;
-    height: 30px;
-    font-family: 'Times New Roman', Times, serif;
-    text-align: center;
-}
 
 label {
     font-weight: bold;
@@ -58,8 +54,10 @@ label {
     font-size: 24px;
 }
 
+
 button {
     width: 500px;
+    max-width: 90%;
     height: 30px;
     border-radius: 20px;
     cursor: pointer;
@@ -73,8 +71,11 @@ button:hover {
     color: white;
 }
 
+
 a {
-    width: 2000px;
+    display: inline-block;
+    width: 500px;
+    max-width: 90%;
     height: 30px;
     border-radius: 20px;
     cursor: pointer;
@@ -82,6 +83,8 @@ a {
     font-family: 'Times New Roman', Times, serif;
     font-size: 2vh;
     color: rgb(255, 255, 255);
+    text-align: center;
+    line-height: 30px;
 }
 a:hover {
     color: black;
