--- a/signup.css
+++ b/signup.css
@@ -1,3 +1,12 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -64,3 +73,4 @@ a {
 a:hover {
     background-color: #424874;
 }
+
