--- a/signup.css
+++ b/signup.css
@@ -15,10 +15,9 @@ body {
     background-color: #DCD6F7;
     animation: fadeIn 1.5s ease-in-out forwards;
     height: 100vh;
-    width: 100%; 
+    width: 100%;
     margin: 0;
 }
-
 
 .container {
     display: flex;
@@ -28,49 +27,47 @@ body {
     border: 2px solid;
     border-radius: 10px;
     width: 450px;        
-    max-width: 90%;      
+    max-width: 95%;     
     min-height: 550px;     
-    font-family: 'Times New Roman', Times, serif;
     padding: 20px;
     gap: 15px;            
     background-color: #DCD6F7;
+    box-sizing: border-box; /* ✅ prevents borders/padding from breaking layout */
 }
-
 
 .credential-box {
     border: 2px solid;
     border-radius: 20px;
     width: 400px; 
-    max-width: 100%;  
+    max-width: 100%; 
     height: 50px; 
-    font-family: 'Times New Roman', Times, serif;
     text-align: center;
     margin: 5px 0;
     font-size: 2vh;
+    box-sizing: border-box;
 }
 
 #signup {
     border: 2px solid;
     border-radius: 10px;
     width: 408px;
-    max-width: 100%;
+    max-width: 100%; 
     height: 40px;
     cursor: pointer;
-    font-family: 'Times New Roman', Times, serif;
     font-size: 2vh;
     color: #A6B1E1;
+    box-sizing: border-box;
 }
 
 #signup:hover {
     background-color: #424874;
+    color: white; 
 }
 
 a {
-    font-family: 'Times New Roman', Times, serif;
     color: #A6B1E1;
+    text-decoration: none;
 }
 
 a:hover {
-    background-color: #424874;
-}
-
+    background-color:
