--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     padding: 30px;
     box-sizing: border-box;
     background-color: #f3b391;
-    border: 1px solid;
+    border: 1px solid #ccc;
     border-radius: 20px;
 }
 
@@ -69,7 +69,7 @@ label {
     transition: 0.2s ease all;
 }
 
-/* Floating effect */
+/* Floating label effect */
 .form-input:focus + label,
 .form-input:not(:placeholder-shown) + label {
     top: -10px;
